2008-02-18  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.03)

	* Makefile.PL: Linked to -lpcre removed (kill/yank code in 0.02)

2008-02-12  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.02)

	* TRE.xs: set rx->offs[i].start/end to -1 if there aren't any
	matches and set rx->lastparen to the number of matches. Patch by
	Larry Wall.
	* Makefile.PL: Nuke M::I in favor of ExtUtils::MakeMaker while I'm
	at it

2007-07-12  Ævar Arnfjörð Bjarmason  <avar@cpan.org> (0.01)

	* Initial release